# Handover-simulation-networking-

./: CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  f1_handover_changes_report.md  measure_performance.py  run
Team_66_Report/: Bibliography.bib  Head_Footer.tex  abstract.tex  ack.tex  certificate.tex  main.lof  main.lot  main.tex
Team_66_Report/chapters/: app.tex  chap1.tex  chap2.tex  chap3.tex  chap4.tex  chap5.tex  chap6.tex  chap7.tex  chap8.tex
ci-scripts/: Jenkinsfile  Jenkinsfile-GitLab-Container  Jenkinsfile-push-local-repo  Jenkinsfile-push-registry  Jenkinsfile-scheduled-run  args_parse.py  checkAddedWarnings.sh  checkCodingFormattingRules.sh  checkGitLabMergeRequestLabels.sh  ci_infra.yaml  cls_cluster.py  cls_containerize.py  cls_oai_html.py  cls_oaicitest.py  cls_static_code_analysis.py  datalog_rt_stats.100.2x2.fhi72.cacofonix.yaml  doGitLabMerge.sh  helpreadme.py  main.py  pre-ci-check.sh  ran.py  run_locally.sh  xml_class_list.yml
ci-scripts/conf_files/: enb.nsa.band7.25prb.usrpb200.conf  gnb-cu.sa.band78.106prb.conf  gnb-du.sa.band1.52prb.usrpb210.conf  gnb-du.sa.band77.273prb.fhi72.4x4-4L-vvdn.conf  gnb-du.sa.band78.106prb.rfsim.conf  gnb-du.sa.band78.106prb.usrpb200.conf  gnb-du.sa.band78.273prb.fhi72.4x4-4L-benetel550.conf  gnb-du.sa.band78.273prb.fhi72.4x4-4L-liteon.conf  gnb-du.sa.band78.273prb.fhi72.4x4-4L-metanoia.conf  gnb-du.sa.band78.273prb.fhi72.8x8-benetel650_650.conf  gnb-du.sa.band78.51prb.usrpb210.ho-pci0.conf  gnb-pnf.band66.rfsim.conf  (+43 more)
cmake_targets/: build_oai  macros.cmake
common/: 5g_platform_types.h  ngran_types.h  platform_constants.h  platform_types.h  ran_context.h
doc/: 5Gnas.md  BUILD.md  Doxyfile  FEATURE_SET.md  L1SIM.md  LDPC_OFFLOAD_SETUP.md  LDPC_XDMA_offload_setup.md  NR_SA_Tutorial_COTS_UE.md  NR_SA_Tutorial_OAI_nrUE.md  ORAN_FHI7.2_Tutorial.md  README.md  RUNMODEM.md  TESTBenches.md  TESTING_OAI_NSA_COTS_UE.md  data_recording.md  handover-tutorial.md  nfapi.md  physical-simulators.md  runmodem-nrue.md  tuning_and_security.md
docker/: Dockerfile.base.rhel9  Dockerfile.base.ubuntu  Dockerfile.build.fhi72.native_arm.ubuntu  Dockerfile.build.fhi72.rhel9  Dockerfile.build.fhi72.ubuntu  Dockerfile.build.ubuntu  Dockerfile.clang.rhel9  Dockerfile.gNB.fhi72.rhel9  Dockerfile.gNB.fhi72.rocky  Dockerfile.gNB.fhi72.ubuntu  Dockerfile.gNB.ubuntu  Dockerfile.nrUE.ubuntu  Dockerfile.phySim.rhel9
executables/: lte-enb.c  lte-ru.c  lte-softmodem.c  lte-ue.c  lte-uesoftmodem.c  main_nr_ru.c  main_ru.c  nr-gnb.c  nr-ru.c  nr-softmodem-common.h  nr-softmodem.c  nr-softmodem.h  nr-ue-ru.c  nr-ue-ru.h  nr-ue.c  nr-uesoftmodem.c  position_interface.c  ru_control.c  softmodem-common.c  softmodem-common.h
fronthaul/: CMakeLists.txt
fronthaul/oru/: CMakeLists.txt
fronthaul/oru/tests/: CMakeLists.txt
nfapi/: CMakeLists.txt
open5gs/: amf.yaml  mme.yaml  sgwu.yaml  smf.yaml  upf.yaml
openair1/SIMULATION/TOOLS/: CMakeLists.txt  channel_pipeline_v2.cu  channel_sim.c  multipath_channel.cu  oai_cuda.h
openair2/: CMakeLists.txt
openair3/: CMakeLists.txt
radio/: CMakeLists.txt
tests/: CMakeLists.txt
(+1338 files in other folders)
